--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -123,7 +123,7 @@ body::-webkit-scrollbar-thumb {
 
 .c-switch {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   align-items: center;
   justify-content: center;
   width: 20rem;
@@ -136,6 +136,7 @@ body::-webkit-scrollbar-thumb {
   font-family: sans-serif;
   font-weight: bold;
   cursor: pointer;
+  margin-left: 1.5rem;
 }
 
 .switch-text-register {
