--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -324,6 +324,7 @@ input:checked + .slider:before {
   background-color: var(--register-color);
 }
 
+/* --Fotter de exemplo --- */
 .footer {
   width: 100%;
   height: 3rem;
