feat:menu expand colapsível

--- a/codigo-fonte/src/projetos/projetos.css
+++ b/codigo-fonte/src/projetos/projetos.css
@@ -22,6 +22,9 @@
     transition: transform 0.2s ease-in-out;
    
 }
+.custom-container{
+    padding: 10px;
+}
 .categoria {
     display: block;
    
