--- a/codigo-fonte/src/homePage/css/menu.css
+++ b/codigo-fonte/src/homePage/css/menu.css
@@ -1,12 +1,29 @@
-.nav-link:hover {
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
+@media (min-width: 768px) {
+    .navbar-custom {
+        padding-top: 25px;
+        /* Adicione o valor de padding desejado para o modo grande */
+
+    }
 }
 
+ .nav-link:hover {
+     transform: scale(1.2);
+     transition: transform 0.2s ease-in-out;
+ }
+ 
 .nav-link.active {
     font-weight: 600;
 }
 
-.navbar-custom{
+.navbar-custom {
     height: 45px;
+}
+
+.container-fluid {
+    background-color: #44318d;
+}
+
+.navbar-toggler {
+    border: none;
+    outline: none;
 }
