--- a/codigo-fonte/src/homePage/css/style.css
+++ b/codigo-fonte/src/homePage/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .title h1,
 .title h6 {
-    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.066);
+    color: #44318d !important;
 }
 
 .carousel-item img {
@@ -20,3 +20,4 @@ body {
  .carousel-caption p {
      text-shadow: 2px 2px 8px rgba(0, 0, 0, 1.0);
  }
+
