--- a/codigo-fonte/src/homePage/css/style.css
+++ b/codigo-fonte/src/homePage/css/style.css
@@ -37,6 +37,12 @@ body {
     border-radius: 20px;
 }
 
+@media (max-width: 370px) {
+    .carousel-inner h5 {
+        display: none !important;
+    }
+}
+
 .carousel-caption h5,
 .carousel-caption p {
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
@@ -59,9 +65,11 @@ body {
     background-color: #7f66a7;
 }
 
-.section-3 img{
+.section-3 img {
     border-radius: 50%;
     max-width: 100px;
-    
-   
+}
+
+.section-3 h5 {
+    color: #44318d !important;
 }
