:sparkles: feat: Inclusao section 4, Quem somos.

--- a/codigo-fonte/src/homePage/css/style.css
+++ b/codigo-fonte/src/homePage/css/style.css
@@ -77,3 +77,16 @@ body {
 .section-3 h5 {
     color: #44318d !important;
 }
+
+.section-4 img{
+width: 100%;
+height: auto;
+}
+
+@media (max-width: 767px) {
+    .section-4 img {
+        width: 60%;
+        height: auto;
+        padding-top: 14px !important; 
+    }
+}
