--- a/codigo-fonte/src/perfilVoluntario/css/perfilVoluntario.css
+++ b/codigo-fonte/src/perfilVoluntario/css/perfilVoluntario.css
@@ -1,87 +1,122 @@
-.perfil {
-    padding: 10px ;
-    margin: 30px;
- }
- 
- .info {
-    position: absolute;
-    top: 200px;
-    right: 750px;
- }
-
- .rank {
-    position: absolute;
-    top: 180px;
-    right: 500px;
- }
- 
- .certificado {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
- }
-
- .niveis {
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
-
- h3 {
-   display: flex;
-   align-items: center;
-   justify-content: center;
- }
- 
-
- .cards {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   border-radius: 15px;
+body {
+   font-family: Arial, Helvetica, sans-serif;
+   background-color: #2A1B3D;
+   margin: 0;
+   padding: 0;
 }
 
-.titulo {
-   border-radius: 15px;
-   box-shadow: 7px 7px 13px 0 rgba(50, 50, 50, 0.22);
-   padding: 20px;
+p {
+font-size: large;
+}
+
+
+.lista {
+   gap: 20px;
+   font-weight: bold;
+}
+
+
+.pagina-perfil {
+   display: flex;
+   justify-content: space-around;
    margin: 20px;
-   width: 300px;
-   transition: all 0.3s ease-out;
-   color: white;
-   
-   
+   background-color: #2A1B3D;
+   color: aliceblue;
+   padding: 20px;
+   border-radius: 10px;
+   border: 2px solid #7f66a7;
+
 }
 
-.titulo:hover {
-   transform: translateY(-5px);
+.perfil img {
+   width: 200px;
+   height: 200px;
+}
+
+.info {
+   text-align: center;
+}
+
+.botao-certificado {
+   background-color: #FFFFFF;
+   border: none;
+   padding: 2px 5px;
+   border-radius: 5px;
    cursor: pointer;
+   font-size: large;
 }
 
-.titulo p {
-   font-size: 16px;
+.botao-certificado:hover {
+   background-color: #D83F87;
 }
 
+.rank img {
+   width: 180px;
+   height: 180px;
+   margin-top: 20px;
+}
+
+.niveis {
+   text-align: center;
+   margin: 20px;
+   background-color: #2A1B3D;
+   padding: 20px;
+   border-radius: 10px;
+   color: white;
+   border: 2px solid #7f66a7;
+
+}
+
+h3 {
+   font-weight: bold;
+   text-align: center;
+}
 .icone-niveis {
    width: 15px;
    height: 15px;
 }
 
-.cards:hover {
-   background-color: #44318D;
-   color: black;
+
+.cards img {
+   width: 180px;
+   height: 180px;
 }
 
-.projetos {
-   margin-bottom: 200px;
+.cards {
+   display: flex;
+   justify-content: center;
+   gap: 20px;
 }
 
-.body {
-   margin: 60px;
+.botao-finalizar {
+   background-color:white;
+   border: none;
+   padding: 5px 5px;
+   border-radius: 5px;
+   cursor: pointer;
+   display: grid;
+   margin-left: 90px;
+   margin-top: 10px;
+}
+
+.botao-finalizar:hover {
+   background-color: #D83F87;
+}
+
+.projeto-card {
+   width: 300px;
+   height: 350px;
    background-color: #2A1B3D;
-   color: aliceblue;
-   border-radius: 15px;
+   margin: 10px;
+   text-align: center;
+   border: 2px solid #7f66a7;
+   border-radius: 10px;
+   padding: 20px;
+   color: white;
+}
+
+.conteudo-card {
+   margin-bottom: 10px;
 }
 
 
