--- a/codigo-fonte/src/projetos/projetos.css
+++ b/codigo-fonte/src/projetos/projetos.css
@@ -70,6 +70,7 @@ footer{
     
 }
 .botao-vermais{
+    cursor: pointer;
     font-size: 0.9em;
     background-color: var(--background-botao);
     color: white;
