--- a/codigo-fonte/src/homePage/css/menu.css
+++ b/codigo-fonte/src/homePage/css/menu.css
@@ -5,8 +5,9 @@
 }
 
 .nav-link:hover {
-    transform: scale(1.2);
-    transition: transform 0.2s ease-in-out;
+    font-size: 18px;
+    font-weight: 500;
+    transition: transform 0.4s ease-in-out;
 }
 
 .nav-link.active {
@@ -28,4 +29,8 @@
 
 .margin-adjust {
     margin-top: 140px;
+}
+
+#mainContent {
+    transition: margin 0.5s ease-in-out;
 }
