--- a/codigo-fonte/src/perfilVoluntario/css/menu.css
+++ b/codigo-fonte/src/perfilVoluntario/css/menu.css
@@ -5,13 +5,13 @@
 }
 
 .nav-link:hover {
-    transform: scale(1.2);
-    transition: transform 0.2s ease-in-out;
+    font-size: 18px;
+    font-weight: 500;
+    transition: transform 0.4s ease-in-out;
 }
 
 .nav-link.active {
     font-weight: 600;
-    
 }
 
 .navbar-custom {
@@ -31,6 +31,6 @@
     margin-top: 140px;
 }
 
-.nav-item {
-    
+#mainContent {
+    transition: margin 0.5s ease-in-out;
 }
