:sparkles: feat: Atualizacao cor login

--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -1,7 +1,7 @@
 /* CSS usado em todo o arquivo: */
 :root {
   --login-color: #2a1b3d;
-  --register-color: #a4b3b6;
+  --register-color: #44318d;
   --background-color: #d83f87;
 }
 
