--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -2,7 +2,7 @@
 :root {
   --login-color: #2a1b3d;
   --register-color: #44318d;
-  --background-color: #d83f87;
+  --background-color: #7f66a7;
 }
 
 * {
