--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -1,8 +1,8 @@
 /* CSS usado em todo o arquivo: */
 :root {
-  --login-color: #2a1b3d;
-  --register-color: #44318d;
-  --background-color: #7f66a7;
+  --login-color: #7f66a7;
+  --register-color: #d83f87;
+  --background-color: #2a1b3d;
 }
 
 * {
