--- a/codigo-fonte/src/geral/cores.css
+++ b/codigo-fonte/src/geral/cores.css
@@ -1,10 +1,10 @@
-/* CORES TEMPLATES PARA USO
-
-#d83f87
-#2a1b3d
-#44318d
-#7f66a7
-#a4b3b6 
+/* CORES TEMPLATES PARA USO */
 
 
-*/
+:root {
+    --cor-1: #7f66a7;
+    --cor-2: #d83f87;
+    --cor-3: #2a1b3d;
+    --cor-4: #a4b3b6;
+    --cor-5: #44318d;
+}
